@@ -1663,6 +1663,15 @@ Y = data.table(a=factor(c("D","B"),levels=rev(LETTERS)),key="a")
 test(578, X[Y], warning="Coercing factor column i.'a' to character to match type of x.'a'")
 test(579, suppressWarnings(X[Y]), data.table(a=c("D","B"), v=c(4L,2L)))
 
+# Test that logical i in set() returns helpful error
+DT = data.table(a=1:3,b=4:6)
+test(580, set(DT,a<3,"b",0L), error="simply wrap with which[(][)], and take the which[(][)] outside the loop if possible for efficiency")
+
+# Test when i returns empty data.table
+# DT = data.table(a=1:3,v=1:6)
+# test(581, DT[a<1,sum(v),by=a], DT[a<1])
+# test(582, DT[a<1], DT[0])
+# test(583, capture.output(DT[a<1]), paste("Empty data.table (0 rows), X columns:", paste(names(DT),collapse=",")))
 
 # TO DO: add FAQ that  eval() is evaled in calling frame so don't need a, then update SO question of 14 March. See the test using variable name same as column name. Actually, is that true?  Need "..J".
 # TO DO: move timings into --timing
